--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <table border="0">
 <tr>
 <td>
-<img src="images/tomcat.gif">
+<img src="images/tomcat.gif" alt= "tomcat">
 </td>
 <td>
 <h1>Bonjour, ceci est mon application ATCHUTHAN Harishan</h1>
