--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 <body bgcolor=white>
 
 <table border="0">
+  <caption>Table Caption</caption>
 <tr>
+  <th>MONTH</th>
 <td>
 <img src="images/tomcat.gif" alt= "tomcat">
 </td>
