--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>Sample "Hello, World" Application</title>
 </head>
-<body bgcolor=white>
+<body=white>
 
 <table border="0">
   <caption>Table Caption</caption>
